--- a/conf_clone_app/pubspec.yaml
+++ b/conf_clone_app/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   sticky_headers: "^0.1.7"
+  flutter_webview_plugin: ^0.3.0+2
 
 dev_dependencies:
   flutter_test:
